encodage mots de passe

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -8,7 +8,7 @@
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
         <div class="col">
             <div class="card h-100">
-                <img src="./images/agde.jpg" alt="agde" class="img-thumbnail">
+                <img src="{{ asset('assets/images/agde.jpg') }}" alt="agde" class="img-thumbnail">
 
                 <div class="card-body">
                     <p class="card-text"><a href="https://fr.wikipedia.org/wiki/Agde">Agde</a> est une commune française située dans le département de l'Hérault, en région Occitanie. La ville d'Agde, surnommée parfois « la perle noire de la Méditerranée » à cause de ses monuments construits en pierre basaltique, a une longue histoire.</p>
@@ -28,7 +28,7 @@
         </div>
         <div class="col">
             <div class="card h-100">
-                <img src="./images/commentry.jpg" alt="commentry" class="img-thumbnail">
+                <img src="{{ asset('assets/images/commentry.jpg') }}" alt="commentry" class="img-thumbnail">
 
                 <div class="card-body">
                     <p class="card-text"><a href="https://fr.wikipedia.org/wiki/Commentry">Commentry</a>  est une commune française située dans le département de l'Allier, en région Auvergne-Rhône-Alpes. Ses habitants, au nombre de 6 159 en 2018, sont appelés les Commentryens.</p>
@@ -47,7 +47,7 @@
 
         <div class="col">
             <div class="card h-100">
-                <img src="./images/alsace.jpg" alt="alsace" class="img-thumbnail">
+                <img src="{{ asset('assets/images/alsace.jpg') }}" alt="alsace" class="img-thumbnail">
 
                 <div class="card-body">
                     <p class="card-text"><a href="https://fr.wikipedia.org/wiki/Alsace">L'Alsace</a> est une région historique du nord-est de la France, dans la plaine du Rhin. Située à la frontière avec l'Allemagne et la Suisse, elle a été sous le contrôle de l'Allemagne et de la France au fil des siècles, et reflète un mélange de ces cultures. Strasbourg, la capitale, s'articule autour de la Grande Île de l'Ill, bordée de canaux et abritant la cathédrale gothique Notre-Dame de Strasbourg, qui comprend une horloge astronomique animée.</p>
@@ -66,7 +66,7 @@
 
         <div class="col">
             <div class="card h-100">
-                <img src="./images/collioure.jpg" alt="collioure" class="img-thumbnail">
+                <img src="{{ asset('assets/images/collioure.jpg') }}" alt="collioure" class="img-thumbnail">
 
                 <div class="card-body">
                     <p class="card-text"><a href="https://fr.wikipedia.org/wiki/Collioure">Collioure</a> est une commune française située sur le littoral méditerranéen du département des Pyrénées-Orientales. Au dernier recensement de 2018, la commune comptait 2 418 habitants, appelés les Colliourencs et les Colliourencques.</p>
@@ -85,7 +85,7 @@
 
         <div class="col">
             <div class="card h-100">
-                <img src="./images/chenonceau.jpg" alt="chenonceau" class="img-thumbnail">
+                <img src="{{ asset('assets/images/chenonceau.jpg') }}" alt="chenonceau" class="img-thumbnail">
 
                 <div class="card-body">
                     <p class="card-text"><a href="https://fr.wikipedia.org/wiki/Chenonceaux">Chenonceaux</a> est une commune française du département d'Indre-et-Loire, en région Centre-Val de Loire.</p>
@@ -104,7 +104,7 @@
 
         <div class="col">
             <div class="card h-100">
-                <img src="./images/bourgogne.jpg" alt="bourgogne" class="img-thumbnail">
+                <img src="{{ asset('assets/images/bourgogne.jpg') }}" alt="bourgogne" class="img-thumbnail">
 
                 <div class="card-body">
                     <p class="card-text"><a href="https://fr.wikipedia.org/wiki/Bourgogne_(ancienne_r%C3%A9gion_administrative)">La Bourgogne</a> est une région historique du centre-est de la France. Elle est réputée pour ses vins, ainsi que pour le Pinot Noir, le Chardonnay, le Chablis et le Beaujolais. La région est traversée par un réseau de canaux et parsemée de châteaux majestueux, dont certains ont été transformés en hôtels de luxe. Dijon, la capitale célèbre pour sa moutarde, abrite l'imposant palais des ducs, où le musée des Beaux-Arts a été établi en 1787.</p>
@@ -123,7 +123,7 @@
 
         <div class="col">
             <div class="card h-100">
-                <img src="./images/angers.jpg" alt="angers" class="img-thumbnail">
+                <img src="{{ asset('assets/images/angers.jpg') }}" alt="angers" class="img-thumbnail">
 
                 <div class="card-body">
                     <p class="card-text"><a href="https://fr.wikipedia.org/wiki/Angers">Angers</a> est une ville de l'ouest de la France, située à côté de la Maine, en périphérie de la vallée de la Loire. Siège médiéval de la dynastie des Plantagenêt, elle possède une vieille ville dotée de maisons à colombages, comme la superbe maison d'Adam (édifiée autour de 1500). La cathédrale Saint-Maurice, sur la place centrale Sainte-Croix, arbore deux tours de 75 mètres de haut ainsi que de magnifiques vitraux roses. Les zones urbaines plus récentes voient se développer la culture des cafés.</p>
@@ -142,7 +142,7 @@
 
         <div class="col">
             <div class="card h-100">
-                <img src="./images/jura.jpg" alt="jura" class="img-thumbnail">
+                <img src="{{ asset('assets/images/jura.jpg') }}" alt="jura" class="img-thumbnail">
 
                 <div class="card-body">
                     <p class="card-text"><a href="https://fr.wikipedia.org/wiki/Jura_(d%C3%A9partement)">Le Jura</a> est un département de l'est de la France. Une vaste plaine laisse place à des vignobles à flanc de coteau, puis au massif du Jura au sud-est, plus en altitude. C'est un lieu connu pour ses vallées et ses lacs bordés de plage, notamment celui de Chalain et le barrage navigable du lac de Vouglans. Dans les hauteurs, des sentiers traversent les montagnes boisées et les prairies alpines du parc naturel régional du Haut-Jura, où des lynx et des chamois vivent en liberté.</p>
@@ -161,7 +161,7 @@
 
         <div class="col">
             <div class="card h-100">
-                <img src="./images/pau.jpg" alt="pau" class="img-thumbnail">
+                <img src="{{ asset('assets/images/pau.jpg') }}" alt="pau" class="img-thumbnail">
 
                 <div class="card-body">
                     <p class="card-text"><a href="https://fr.wikipedia.org/wiki/Jura_(d%C3%A9partement)">Pau</a> est une ville située dans le sud-ouest de la France, le long de l'arête nord des Pyrénées, à environ 85 km de la frontière espagnole. En arpentant le boulevard des Pyrénées, dans le centre-ville, les piétons pourront admirer la campagne et profiter d'un panorama sur les montagnes par temps clair. Le boulevard mène au château de Pau, lieu de naissance de Henri IV, roi de France et de Navarre. Il expose aujourd'hui des tapisseries, du mobilier et des œuvres d'art de l'époque.</p>
