--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -115,13 +115,14 @@
     </section>
     {% endif %}
 
-
+    {% block content %}
     <div class="album py-5 bg-light ">
-        {% block content %}
-        {% endblock %}
+
+
         </div>
+    {% endblock %}
 
-
+    {% if block('footers') is defined%}
     <footer class="p-3 mb-2 bg-info text-white footer-custom">
         <nav aria-label="Page navigation">
             <ul class="pagination justify-content-center">
@@ -155,7 +156,7 @@
 
         </div>
     </footer>
-
+    {% endif %}
 
 </main>
 
