--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -9,7 +9,7 @@ body {
     text-align: center;
     position: absolute;
     width: 100%;
-    background-color: #dfeaff;
+    /*background-color: #dfeaff;*/
     padding-top: 25px;
     margin-top: 50px;
 }
