modif text-start footer

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -115,11 +115,11 @@
         {% endif %}
         <div class="container">
             <div class="row">
-                <div class="col-sm-8 col-md-7 py-4">
+                <div class="col-sm-8 col-md-7 py-4 text-start">
                     <h4 class="text-white">A propos de</h4>
                     <p class="text-white">Un dé à coudre est un petit objet souvent cylindrique dans lequel on insère le bout du doigt pour le protéger de l'aiguille à coudre, généralement le majeur ou l'annulaire.</p>
                 </div>
-                <div class="col-sm-4 offset-md-1 py-4">
+                <div class="col-sm-4 offset-md-1 py-4 text-start">
                     <h4 class="text-white">Contact</h4>
                     <ul class="list-unstyled">
                         <li><a href="#" class="text-white">Email</a></li>
