--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,6 +8,7 @@
     <meta name="generator" content="Hugo 0.80.0">
     <link rel="shortcut icon" type="image/x-icon" href="{{ asset('assets/images/dé1.jpg') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link href='https://fonts.googleapis.com/css?family=Hammersmith One' rel='stylesheet'>
     <link rel="stylesheet" href="{{ asset('assets/css/style.css') }}">
     <title>{% block tittle %}Dé-2-JP{% endblock %}</title>
 
@@ -35,6 +36,10 @@
 
         h1 {
             color : white;
+        }
+
+        body {
+            font-family: 'Hammersmith One';font-size: 22px;
         }
     </style>
 
@@ -75,7 +80,7 @@
         <div class="row py-lg-5">
             <div class="col-lg-6 col-md-8 mx-auto">
                 <h2 class="fw-bold">DE A COUDRE</h2><br>
-                <p class="fst-italic">Je vous présente ma collection de dé à coudre venu des differentes régions de France et de pays. Je m'appelle Jean-Paul, j' ai 41 ans et je vis dans l'Allier.</p>
+                <p class="fst-italic">Je vous présente ma collection de dé à coudre venu des differentes régions de France et de pays. Je m'appelle Jean-Paul, j' ai 43 ans et je vis dans l'Allier.</p>
             </div>
         </div>
     </section>
