--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -86,11 +86,12 @@
     </section>
     {% endif %}
 
-
-    <div class="album py-5  bg-light{% if block('a_propos') is not defined %}mt-5 bg-white{% endif %}">
+    <!--<div class="container mt-6 }">-->
+    <!--<div class="container ">-->
+    <!--<div class="album py-5  bg-light">-->
         {% block content %}
         {% endblock %}
-        </div>
+       <!-- </div>-->
 
 
 
