--- a/templates/register/index.html.twig
+++ b/templates/register/index.html.twig
@@ -1,9 +1,10 @@
 {% extends 'base.html.twig' %}
 
 {% block content %}
-    <h1 class="text-black">Inscription</h1>
+    <div class="container mt-5">
+        <h1 class="text-black">Inscription</h1>
 
-    {{ form(form) }}
-
+        {{ form(form) }}
+    </div>
 {% endblock %}
 
