mdifi mot de passe de l'utilisateur

--- a/templates/account/password.html.twig
+++ b/templates/account/password.html.twig
@@ -7,6 +7,9 @@
         <h1 class="text-black">Modifier mon mot de passe</h1>
         - <a href="{{ path('account') }}">Retourner à mon compte</a>
         <hr>
+        {% if notification %}
+            <div class="alert alert-info">{{ notification }}</div>
+        {% endif %}
         {{ form(form) }}
         <hr>
     </div>
