--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,15 +1,14 @@
 body {
     position: relative;
 }
-.navbar-item-custom, .navbar-item-custom a {
-    color: #fff;
-}
 
+.navbar-item-custom, .navbar-item-custom a {
+    color: #FFF;
+}
 .footer-custom {
     text-align: center;
     position: absolute;
     width: 100%;
-    /*background-color: #dfeaff;*/
     padding-top: 25px;
     margin-top: 50px;
 }
