--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -161,7 +161,7 @@
                 <img src="{{ asset('assets/images/pau.jpg') }}" alt="pau" class="img-thumbnail">
 
                 <div class="card-body">
-                    <p class="card-text"><a href="https://fr.wikipedia.org/wiki/Jura_(d%C3%A9partement)">Pau</a> est une ville située dans le sud-ouest de la France, le long de l'arête nord des Pyrénées, à environ 85 km de la frontière espagnole. En arpentant le boulevard des Pyrénées, dans le centre-ville, les piétons pourront admirer la campagne et profiter d'un panorama sur les montagnes par temps clair. Le boulevard mène au château de Pau, lieu de naissance de Henri IV, roi de France et de Navarre. Il expose aujourd'hui des tapisseries, du mobilier et des œuvres d'art de l'époque.</p>
+                    <p class="card-text"><a href="https://fr.wikipedia.org/wiki/Pau">Pau</a> est une ville située dans le sud-ouest de la France, le long de l'arête nord des Pyrénées, à environ 85 km de la frontière espagnole. En arpentant le boulevard des Pyrénées, dans le centre-ville, les piétons pourront admirer la campagne et profiter d'un panorama sur les montagnes par temps clair. Le boulevard mène au château de Pau, lieu de naissance de Henri IV, roi de France et de Navarre. Il expose aujourd'hui des tapisseries, du mobilier et des œuvres d'art de l'époque.</p>
                 </div>
                 <div class="card-footer">
                     <div class="d-flex justify-content-between align-items-center">
