creation d'une barre de filtre

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -62,6 +62,7 @@
             </a>
             <h1><strong><a href="{{ path('home') }}">Dé-2-JP</a></strong></h1>
             <div class="navbar-item-custom">
+                <button type="button" class="btn btn-outline-danger"><a href="{{ path('products') }}">Dé à coudre </a></button>
                 {% if app.user %}
                     <button type="button" class="btn btn-outline-danger"><a href="{{ path('account') }}">Mon compte <small>({{ app.user.firstname }})</small></a></button>
                     <button type="button" class="btn btn-outline-success"><a href="{{ path('app_logout') }}">Déconnexion</a></button>
