--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -3,15 +3,25 @@
 {% block title %}Dé-2-JP{% endblock %}
 
 {% block content %}
-    <h1 class="text-black">Dé à coudre</h1>
+    <div class="row">
+        <div class="col-md-3">
+            <h3 class="text-black">Filtrer</h3>
+            {{ form(form) }}
+        </div>
 
-    <div class="album py-5  bg-light">
-        <div class="container">
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-                {% for product in products %}
-                    {% include 'product/single_product.html.twig' %}
-                {% endfor %}
+        <div class="col-md-9">
+            <h3 class="text-black">Dé à coudre</h3>
+
+            <div class="album py-5  bg-light">
+                <div class="container">
+                    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+                        {% for product in products %}
+                            {% include 'product/single_product.html.twig' %}
+                        {% endfor %}
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 {% endblock %}
+
