modiffier navbar + securiser packoffice

--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -8,9 +8,10 @@
         Bienvenue {{ app.user.firstname }} dans votre compte.<br/>
         C'est dans cet espace que vous allez pouvoir gérer toutes vos informations personnelles.
         <hr>
+        {% if is_granted('ROLE_ADMIN') %}
+        - <a href="/admin">Vous êtes un administrateur, accéder au backoffice ?</a></br>
+        {% endif %}
         - <a href="{{ path('account_password') }}">Modifier mon mot de passe</a>
-        <br>
-        <br>
         <br>
         <br>
         <br>
