creation logo navbar

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -49,7 +49,8 @@
 
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-info">
-        <a class="navbar-brand" href="{{ path('home') }}"><strong>Dé-2-JP</strong></a>
+        <a class="navbar-brand" href="{{ path('home') }}"><strong>Dé-2-JP <img src="./assets/images/dé1.jpg"
+                    class="me-4" width="30" align="left"></strong></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
