--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -48,7 +48,7 @@
 <body>
 
 <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-info">
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #0d6efd">
         <a class="navbar-brand" href="{{ path('home') }}"><strong>Dé-2-JP <img src="./assets/images/dé1.jpg"
                     class="me-4" width="30" align="left"></strong></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -127,8 +127,52 @@
        <!-- </div>-->
 
 
+    
+    
 
-    <footer class="p-3 mb-2 bg-info text-white footer-custom">
+    <footer style="background-color: #0d6efd">
+        <div class="container p-4">
+            <div class="row">
+            <div class="col-lg-6 col-md-12 mb-4 text-white">
+            <h5 class="mb-3 text-white">A propos de</h5>
+            <p>
+                Un dé à coudre est un petit objet souvent cylindrique dans lequel on insère le bout du doigt pour le protéger de l'aiguille à coudre, généralement le majeur ou l'annulaire.
+            </p>
+            </div>
+        <div class="col-lg-3 col-md-6 mb-4">
+          <h5 class="mb-3 text-white">Contact</h5>
+            <ul class="list-unstyled mb-0">
+                <li class="mb-1">
+                    <a href="#!" style="color: white;">Email</a>
+                </li>
+            </ul>
+        </div>
+        <!--<div class="col-lg-3 col-md-6 mb-4">
+          <h5 class="mb-1 text-dark">opening hours</h5>
+          <table class="table" style="border-color: #666;">
+            <tbody>
+              <tr>
+                <td>Mon - Fri:</td>
+                <td>8am - 9pm</td>
+              </tr>
+              <tr>
+                <td>Sat - Sun:</td>
+                <td>8am - 1am</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>-->
+      </div>
+    </div>
+    <div class="text-center text-white p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      © 2023 Copyright : Dé-2-JP
+    </div>
+    <!-- Copyright -->
+  </footer>
+  
+    
+    
+    <!--<footer class="p-3 mb-2 bg-info text-white footer-custom">
         {% if block('footers') is defined%}
         <nav aria-label="Page navigation">
             <ul class="pagination justify-content-center">
@@ -178,7 +222,7 @@
             <p class="text-center"> &copy; Dé-2-JP 2022</p>
 
         </div>
-    </footer>
+    </footer>-->
 
 
 </main>
