--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -49,7 +49,7 @@
 
 <header>
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #0d6efd">
-        <a class="navbar-brand" href="{{ path('home') }}"><strong>Dé-2-JP <img src="./assets/images/dé1.jpg"
+        <a class="navbar-brand animate__animated animate__backInLeft" href="{{ path('home') }}"><strong>Dé-2-JP <img src="{{ asset('assets/images/dé1.jpg') }}"
                     class="me-4" width="30" align="left"></strong></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -76,6 +76,12 @@
                 <a class="nav-link" href="{{ path('register') }}">Inscription</a>
                 </li>
                 {% endif %}
+                <li class="nav-item">
+                    <a class="nav-link" href="#section1">A propos de</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#section1">Contact</a>
+                </li>
                 <li class="nav-item dropdown">
                 <div class="dropdown-menu">
                     <a class="dropdown-item" href="{{ path('products') }}">Home</a>
@@ -86,25 +92,6 @@
             </ul>
         </div>
     </nav>
-    <!--<div class="navbar navbar-dark bg-info shadow-sm">
-        <div class="container">
-            <a href="{{ path('home') }}" class="navbar-brand d-flex align-items-center animate__animated animate__backInLeft">
-                <img src="{{ asset('assets/images/dé1.jpg') }}" class="img-thumbnail" alt="icones" />
-
-            </a>
-            <h1><strong><a href="{{ path('home') }}">Dé-2-JP</a></strong></h1>
-            <div class="navbar-item-custom">
-                <a href="{{ path('products') }}">Dé à coudre |</a>
-                {% if app.user %}
-                    <a href="{{ path('account') }}">Mon compte <small>({{ app.user.firstname }}) |</small></a>
-                    <a href="{{ path('app_logout') }}">Déconnexion</a>
-                {% else %}
-                <a href="{{ path('app_login') }}">Connexion |</a>
-                <a href="{{ path('register') }}">Inscription</a>
-                {% endif %}
-            </div>
-        </div>
-    </div>-->
 </header>
 
 <main>
@@ -134,7 +121,7 @@
         <div class="container p-4">
             <div class="row">
             <div class="col-lg-6 col-md-12 mb-4 text-white">
-            <h5 class="mb-3 text-white">A propos de</h5>
+            <h5 id="section1" class="mb-3 text-white">A propos de</h5>
             <p>
                 Un dé à coudre est un petit objet souvent cylindrique dans lequel on insère le bout du doigt pour le protéger de l'aiguille à coudre, généralement le majeur ou l'annulaire.
             </p>
@@ -147,21 +134,6 @@
                 </li>
             </ul>
         </div>
-        <!--<div class="col-lg-3 col-md-6 mb-4">
-          <h5 class="mb-1 text-dark">opening hours</h5>
-          <table class="table" style="border-color: #666;">
-            <tbody>
-              <tr>
-                <td>Mon - Fri:</td>
-                <td>8am - 9pm</td>
-              </tr>
-              <tr>
-                <td>Sat - Sun:</td>
-                <td>8am - 1am</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>-->
       </div>
     </div>
     <div class="text-center text-white p-3" style="background-color: rgba(0, 0, 0, 0.2);">
@@ -169,62 +141,6 @@
     </div>
     <!-- Copyright -->
   </footer>
-  
-    
-    
-    <!--<footer class="p-3 mb-2 bg-info text-white footer-custom">
-        {% if block('footers') is defined%}
-        <nav aria-label="Page navigation">
-            <ul class="pagination justify-content-center">
-
-                <li class="page-item">
-
-                    <a class="page-link" href="#" aria-label="Previous">
-                        <span aria-hidden="true">&laquo;</span>
-                    </a>
-                </li>
-                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                <li class="page-item">
-                    <a class="page-link" href="#" aria-label="Next">
-                        <span aria-hidden="true">&raquo;</span>
-                    </a>
-
-                </li>
-
-            </ul>
-        </nav><hr>
-        {% endif %}
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-8 col-md-7 py-4 text-start">
-                    <h4 class="text-white">A propos de</h4>
-                    <p class="text-white">Un dé à coudre est un petit objet souvent cylindrique dans lequel on insère le bout du doigt pour le protéger de l'aiguille à coudre, généralement le majeur ou l'annulaire.</p>
-                </div>
-                <div class="col-sm-4 offset-md-1 py-4 text-start">
-                    <h4 class="text-white">Contact</h4>
-                    <ul class="list-unstyled">
-                        <li><a href="#" class="text-white">Email</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <p class="float-end mb-1">
-                <a href="#">
-                    <button type="button" class="btn btn-light">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up" viewBox="0 0 16 16">
-                            <path fill-rule="evenodd" d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z"/>
-                        </svg></button>
-                </a>
-            </p>
-            <p class="text-center"> &copy; Dé-2-JP 2022</p>
-
-        </div>
-    </footer>-->
-
-
 </main>
 
 
